turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:1: error: value White is not a member of object java.awt.Color
  if(getCouleurSol()==Color.White){
                            ^