turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  if(getCouleurSol()==Color.White){
    setCouleurBrosse(Color.black)
    baisseBrosse()
    droite()
    avance()
  }else{
    setCouleurBrosse(Color.white)
    baisseBrosse()
    gauche()
    avance()
  }
}